# ocr-service

./: .env.example  .gitignore  CICD_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  models.py
app/services/: ocr_service.py
