[project]
name = "ocr-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.19.0",
    "pillow>=11.2.1",
    "pycocotools>=2.0.10",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "editdistance>=0.8.1",
    "huggingface-hub>=0.32.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pymupdf>=1.26.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "transformers>=4.53.2",
]
